# picking-ticket-printer-django-system

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pyre_configuration  Dockerfile  LICENSE  README.md  create_superuser.py  docker-compose.yml  entrypoint.sh  migrate_log.txt  mkdocs.yml  pyproject.toml  railway-beat.toml  railway-docs.toml  railway-worker.toml  railway.toml  schema.yml  tmp_fix.py
apps/addresses/: admin.py  models.py  urls.py  views.py
apps/addresses/migrations/: 0001_add_total_volumes_and_confirmed_status.py  0001_initial.py  0002_alter_address_zip_code.py
apps/authentication/: urls.py  views.py
apps/authentication/templates/: login.html
apps/core/management/commands/: create_superuser.py
apps/customers/: admin.py  models.py  urls.py  views.py
apps/customers/migrations/: 0001_add_total_volumes_and_confirmed_status.py  0001_initial.py  0002_customer_phone.py
apps/deliveries/: admin.py  models.py  urls.py  views.py
apps/deliveries/migrations/: 0001_initial.py
apps/erp_sync/: __init__.py  admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/erp_sync/migrations/: 0001_initial.py  0002_add_last_checked_at_and_unique_constraint.py  __init__.py
apps/erp_sync/services/: __init__.py  auth_service.py  erp_importer.py  order_service.py
apps/imports/: apps.py  models.py  tasks.py  urls.py  views.py
apps/imports/migrations/: 0001_initial.py  0002_reset_importbatch_sequence.py
apps/imports/services/: __init__.py  db_importer.py  excel_service.py  excel_service.py.old  file_processors.py  processor_factory.py
apps/imports/templates/: upload_import.html
apps/orders/: admin.py  api_views.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_add_total_volumes_and_confirmed_status.py  0001_initial.py  0002_data_migration.py  0002_order_condition_order_delivery_order_invoice_number_and_more.py  0003_order_situation_alter_order_status.py  0003_refactor_order_route.py  0004_add_import_source_to_order.py  0004_alter_order_status.py  0005_alter_order_status.py
apps/orders/services/: volume_service.py
apps/orders/templates/: index.html
apps/products/: admin.py  models.py  urls.py  views.py
apps/products/migrations/: 0001_add_total_volumes_and_confirmed_status.py  0001_initial.py  0002_remove_product_sku_product_sku_code.py  0003_alter_product_sku_code.py
apps/ticket_printer/: apps.py  urls.py  views.py
apps/ticket_printer/services/: __init__.py  labelary_service.py  zpl_service.py
core/: admin_dashboard.py  middleware.py  settings.py  urls.py
core/templates/: base.html
core/templates/admin/: index.html
data/: 0442739.xls  442160.xls  backup_aws.sql
docker/dev/: docker-compose.yml
docker/django/: Dockerfile  entrypoint.sh
docker/docs/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docker/prod/: docker-compose.yml
docs/: architecture.md  index.md
docs/components/: apps.md  background_tasks.md  printing.md
docs/guides/: deployment.md  development.md
docs/manual/: user_manual.md
nginx/: nginx.conf
site/: 404.html  index.html
site/architecture/: index.html
site/components/apps/: index.html
site/components/background_tasks/: index.html
site/components/printing/: index.html
site/guides/deployment/: index.html
site/guides/development/: index.html
site/manual/user_manual/: index.html
site/search/: search_index.json
tests/: factories.py
tests/imports/: test_db_import.py  test_extract.py  test_file_processors.py
tests/orders/: test_convert_pdf_api.py  test_orders_volumes_api.py  test_volume_service.py
tests/ticket_printer/: test_labelary_service.py  test_zpl_service.py
theme/static_src/: package-lock.json
ticket_printer/: models.py  services.py  urls.py  views.py
ticket_printer/migrations/: 0001_initial.py  0002_seed_data.py  0003_pedido_cliente_cnpj.py  0004_pedido_cliente_codigo.py  0005_importbatch_and_more.py  init.sql
ticket_printer/templates/ticket_printer/: index.html  upload_excel.html
